@@ -14,8 +14,10 @@ $ENV{PERL_CORE} ||= $ARGV{PERL_CORE} if $ARGV{PERL_CORE};
 
 my %tables = 
     (
-     def_t => ['ascii.ucm',
-           '8859-1.ucm', # cp1252 is an alias thereof
+     def_t => [
+           'ascii.ucm',
+           '8859-1.ucm',
+           'cp1252.ucm',
            'null.ucm',
            'ctrl.ucm',
            ]
